--- a/practicaelementos.html
+++ b/practicaelementos.html
@@ -16,7 +16,7 @@
     <hr>
     <br>
 <label for="correo1">Input de correo</label>
-<input type="email" id="correo1" name="correo1">
+<input type="email" id="correo1" name="correo1" placeholder="email@dominio.com">
 <br>
 <hr>
 <br>
